# omnicommerce

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  FRONTEND.md  Makefile  README.md  docker-compose.yml  install.sh  setup.py  start.sh  stop.sh
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3ecafe160c3a_channel_listings에_match_status_match_.py  7bc151c55add_product_price_history_테이블_추가.py  b248bf902293_초기_스키마_생성.py
apps/api/scripts/: seed_admin.py
apps/api/src/: main.py
apps/api/src/api/v1/: admin.py  auth.py  channels.py  config.py  dashboard.py  health.py  inventory.py  jobs.py  orders.py  products.py  router.py  schemas.py
apps/api/src/api/webhooks/: __init__.py  cafe24.py  dispatcher.py  (+1 more)
apps/api/src/config/: loader.py  schema.py
apps/api/src/core/: deps.py  exceptions.py  logging.py  middleware.py  security.py  settings.py
apps/api/src/services/: auth_service.py  channel_service.py  inventory_service.py  matching_service.py  order_service.py  product_service.py
apps/api/src/utils/: clock.py  crypto.py  id.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_admin_auth.py  test_admin_seed.py  test_auth.py  test_dashboard.py  test_health.py  test_inventory_security.py  test_jobs_auth.py  test_product_default_status.py  test_product_inventory_seed.py  test_response_wrapper.py  test_webhooks.py
apps/api/tests/unit/: test_dashboard_helpers.py  test_inventory_entity.py  test_matching_service.py  test_order_entity.py  test_product_entity.py  test_settings_cache.py
(+195 files in other folders)
